name:                toy-language
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SongWithoutWords/toy-language#readme
license:             BSD3
license-file:        LICENSE
author:              Ian McCall
maintainer:          ianmccall93@gmail.com
copyright:           Ian McCall
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable toy-language-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , toy-language
  default-language:    Haskell2010

test-suite toy-language-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , toy-language
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SongWithoutWords/toy-language
